samples/_failures_safe/1761223907_239428_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21cf0c25.c: In function ‘main’:
./samples/SAFE/__tmp_21cf0c25.c:177:5: error: expected declaration or statement at end of input
  177 |     if (!tokens) {
      |     ^~
./samples/SAFE/__tmp_21cf0c25.c:177:5: error: expected declaration or statement at end of input
